# enumrs

./: Cargo.toml  README.md
src/: lib.rs  tag.rs  tags.rs
tests/: test_compiled.rs  test_complex.rs  test_tagged.rs
tests/compiled/: test_bad_name.rs  test_bad_name.stderr  test_duplicate_tags.rs  test_duplicate_tags.stderr  test_malformed_tag.rs  test_malformed_tag.stderr  test_mismatched_types.rs  test_mismatched_types.stderr  test_missing_name.rs  test_missing_name.stderr  test_missing_variable.rs  test_missing_variable.stderr
