[package]
name = "enumrs"
version = "0.2.1"
edition = "2024"
license = "GPL-3.0-only"
description = "A derive for adding arbitrary values to enums"
homepage = "https://github.com/mjhouse/enumrs"
repository = "https://github.com/mjhouse/enumrs"
readme = "README.md"
keywords = [ "enum", "derive", "associate" ]
categories = [  ]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.103", features = ["full"]}
quote = "1.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.79"
evalexpr = "12.0.2"
itertools = "0.14.0"

[dev-dependencies]
trybuild = "1.0.105"
